# Final-Project

./: LICENSE  README.md
HW1/phase1_pnp/src/config/: odom.rviz
HW1/phase1_pnp/src/src/: board.cpp  tag_detector_node.cpp
HW1/phase2_ekf/src/ekf/: CMakeLists.txt
HW2/src/tracking_control/: CMakeLists.txt  package.xml  run.sh  run_path.sh
HW2/src/tracking_control/include/: Controller.h  Tool.h  trajectory.h
HW2/src/tracking_control/launch/: controller_track.launch  path_planning.launch
HW2/src/tracking_control/src/: Control_node.cpp  Controller.cpp  Tool.cpp  path_planning.cpp  trajectory.cpp
HW3&Final Project/controller/: package.xml
HW3&Final Project/controller/include/: controller.h  controller_node.h
HW3&Final Project/controller/launch/: controller.launch
HW3&Final Project/controller/src/: controller.cpp  controller_main.cpp  controller_node.cpp
HW3&Final Project/planning/: CMakeLists.txt  package.xml
HW3&Final Project/planning/include/: common.h  planning_node.h  point_types.h
HW3&Final Project/planning/include/Planner/: EasyPlanner.h
HW3&Final Project/planning/include/collision_detection/: collision_detection.h
HW3&Final Project/planning/include/reference_line/: cubic_spline.hpp  reference_line.h
HW3&Final Project/planning/launch/: planning.launch
HW3&Final Project/planning/src/: common.cpp  cruise_speed_pub.cpp  planning_main.cpp  planning_node.cpp
HW3&Final Project/planning/src/Planner/: EasyPlanner.cpp
HW3&Final Project/planning/src/collision_detection/: collision_detection.cpp
HW3&Final Project/waypoint_msgs/: package.xml
(+5 files in other folders)
