<?xml version="1.0"?>
<package>
  <name>waypoint_msgs</name>
  <version>0.0.0</version>
  <description>The waypoint_msgs package</description>

 
  <maintainer email="next@todo.todo">next</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>uuid_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>catkin</build_type>
  </export>
</package>


